# COSC320

./: README.md
01_VARIABLES/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs
02_functions/: functions1.rs  functions4.rs
03_if/: if1.rs  if2.rs
04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs  primitive_types5.rs  primitive_types6.rs
05_vecs/: vecs2.rs
07_strcuts/: structs1.rs  structs2.rs  structs3.rs
08_enums/: enums1.rs  enums2.rs  enums3.rs
09_strings/: strings1.rs  strings3.rs
0_17tests/: tests1.rs  tests2.rs  tests3.rs
10_modules/: modules1.rs  modules2.rs
11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
12_options/: options1.rs  options2.rs
13_error_handling/: errors1.rs  errors2.rs  errors3.rs  errors4.rs  errors5.rs  errors6.rs
15_tratis/: traits1.rs  traits2.rs  traits3.rs  traits4.rs  traits5.rs
16_lifetimes/: lifetimes2.rs
18_iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
19_smart_pointers/: arc1.rs  box1.rs  cow1.rs
20_threads/: threads2.rs  threads3.rs
c4_rust_Alqattara/: Cargo.toml  main.rs
c4_rust_Alqattara/src/: c4_tests.rs  lib.rs  test_helpers.rs
